# omnigres

./: .gitignore
benchmarks/omnigres-spacetimedb/: FINDINGS.md  README.md  bench_pipeline.c  bench_pipeline.py  lib.sh  run-orioledb.sh  run-postgres.sh  run-spacetimedb.sh
benchmarks/omnigres-spacetimedb/sql/: optimized.conf  setup.sql  transfer_a0.sql  transfer_a15.sql
extensions/omni_python/tests/: omni_dbapi.yml  omni_dbapi_django.yml  omni_dbapi_peewee.yml  omni_dbapi_sqlalchemy.yml  omni_dbapi_sqlalchemy_compliance.yml  omni_dbapi_sqlalchemy_compliance_full.yml
languages/python/: CMakeLists.txt
languages/python/omni_python/src/omni_python/: __init__.py  dbapi.py
languages/python/omni_python_django/: CMakeLists.txt  README.md  pyproject.toml
languages/python/omni_python_django/src/omni_python_django/: __init__.py  _mogrify.py  base.py
languages/python/omni_python_peewee/: CMakeLists.txt  README.md  pyproject.toml
languages/python/omni_python_peewee/src/omni_python_peewee/: __init__.py
languages/python/omni_python_sqlalchemy/: CMakeLists.txt  README.md  pyproject.toml
languages/python/omni_python_sqlalchemy/src/omni_python_sqlalchemy/: __init__.py  runner.py
languages/python/omni_python_sqlalchemy/src/omni_python_sqlalchemy/_compliance/: __init__.py  conftest.py  requirements.py  setup.cfg  test_suite.py
